fix(module:message): fix the z-index of overlay

--- a/components/style/patch.less
+++ b/components/style/patch.less
@@ -1,15 +1,5 @@
 @import './themes/@{root-entry-name}.less';
-
-// cdk overlay
-.cdk-overlay-container {
-  pointer-events: none;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  position: fixed;
-  z-index: 1000;
-}
+@import '~@angular/cdk/overlay-prebuilt.css';
 
 .cdk-visually-hidden {
   border: 0;
@@ -25,59 +15,8 @@
   -moz-appearance: none;
 }
 
-.cdk-overlay-backdrop {
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  -webkit-tap-highlight-color: transparent;
-  transition: opacity 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
-  opacity: 0;
-  position: absolute;
-  pointer-events: auto;
-  z-index: 1000;
-
-  &.ant-modal-mask {
-    opacity: 1;
-  }
-}
-
-.cdk-overlay-pane {
-  position: absolute;
-  pointer-events: auto;
-  z-index: 1000; // Give an opportunity to the content own to manage their z-index such as Modal
-}
-
-.cdk-overlay-connected-position-bounding-box {
-  position: absolute;
-  z-index: 1000;
-  display: flex;
-  flex-direction: column;
-  min-width: 1px;
-  min-height: 1px;
-}
-
-// Used when disabling global scrolling.
-.cdk-global-scrollblock {
-  position: fixed;
-
-  // Necessary for the content not to lose its width. Note that we're using 100%, instead of
-  // 100vw, because 100vw includes the width plus the scrollbar, whereas 100% is the width
-  // that the element had before we made it `fixed`.
-  width: 100%;
-
-  // Note: this will always add a scrollbar to whatever element it is on, which can
-  // potentially result in double scrollbars. It shouldn't be an issue, because we won't
-  // block scrolling on a page that doesn't have a scrollbar in the first place.
-  overflow-y: scroll;
-
-  // https://github.com/angular/material2/issues/15051
-  body {
-    overflow-x: visible;
-  }
-}
-
 .nz-overlay-transparent-backdrop {
+
   &,
   &.cdk-overlay-backdrop-showing {
     opacity: 0;
@@ -85,6 +24,7 @@
 }
 
 .nz-animate-disabled {
+
   // badge
   &.ant-scroll-number-only {
     animation: none;
@@ -98,7 +38,7 @@
       transition: none;
     }
 
-    & > * {
+    &>* {
       transition: none;
     }
   }
@@ -131,7 +71,7 @@
     .ant-menu-submenu-title .anticon {
       transition: none;
 
-      & + span {
+      &+span {
         transition: none;
       }
     }
@@ -139,10 +79,11 @@
 
   // tabs
   &.ant-tabs {
+
     .ant-tabs-top-content.ant-tabs-content-animated,
     .ant-tabs-bottom-content.ant-tabs-content-animated,
-    .ant-tabs-top-content > .ant-tabs-tabpane,
-    .ant-tabs-bottom-content > .ant-tabs-tabpane,
+    .ant-tabs-top-content>.ant-tabs-tabpane,
+    .ant-tabs-bottom-content>.ant-tabs-tabpane,
     &.ant-tabs-left .ant-tabs-ink-bar-animated,
     &.ant-tabs-right .ant-tabs-ink-bar-animated,
     &.ant-tabs-top .ant-tabs-ink-bar-animated,
@@ -152,7 +93,7 @@
   }
 
   // collapse
-  &.ant-collapse > .ant-collapse-item > .ant-collapse-header .ant-collapse-arrow svg {
+  &.ant-collapse>.ant-collapse-item>.ant-collapse-header .ant-collapse-arrow svg {
     transition: none;
   }
 }
